--- a/style.css
+++ b/style.css
@@ -300,4 +300,72 @@ div .nav__btn{
 }
 
 
+/* clients */
+
+.clients {
+    padding: 80px 0 200px 0;
+}
+
+.clients_texttop{
+    font-size: 20px;
+    font-family: "Poppins", sans-serif;
+    text-align: center;
+}
+.clients_h3 {
+    font-size: 48px;
+    font-family: "Poppins", sans-serif;
+    text-align: center;
+    font-weight: 500;
+}
+.arr_clients{
+    padding-bottom: 85px;
+
+}
+
+.clients_wrapper {
+    display: flex;
+    gap: 85px;
+}
+.clients_wrapper-item {
+    background-color: #FFFFFF;
+    border-radius: 40% 0 40% 0;
+    width: 630px;
+    height: 225px;
+    box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
+
+
+    display: flex;
+    align-items: center;
+    position: relative;
+    
+}
+
+.clients_img{
+    position: absolute;
+    left: -50px;
+ 
+
+}
+.clients-item__text {
+    padding-left: 100px;
+}
+
+.clients-item__text-big{
+    padding-top: 10px;
+}
+
+.clients-item__text-small::after{
+    content: url(img/cav.png);
+    display: inline-block;
+    position: absolute;
+    left: 550px;
+    top:50px;
+    width: 10px;
+    height: 10px;
+}
+
+.b_size{
+    font-size: 24px;
+}
+
 
